<resources>
    <string name="app_name">ToDo list app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No data</string>
    <string name="todoListFragmentTitle">ToDo List</string>
    <string name="addFragmentTitle">Add record</string>
    <string name="updateFragmentTitle">Update record</string>
    <string name="scn_add_et_hint_title">Title</string>
    <string name="scn_add_et_hint_description">Description</string>
    <string name="scn_list_fragment_menu_search">Search</string>
    <string name="scn_list_fragment_menu_sort_by">Sort by</string>
    <string name="scn_list_fragment_menu_priority_high">Priority High</string>
    <string name="scn_list_fragment_menu_priority_low">Priority Low</string>
    <string name="scn_list_fragment_menu_delete_all">Delete All</string>
    <string name="scn_add_fragment_menu_add">Add</string>
    <string name="scn_update_fragment_menu_save">Save</string>
    <string name="scn_update_fragment_menu_delete">Delete</string>
    <string name="frg_add_txt_record_added">Record added</string>
    <string name="frg_add_txt_fill_all">Please, fill out all fields</string>
    <string name="frg_update_txt_record_updated">Successfully updated</string>
    <string name="frg_update_txt_record_removed">Successfully removed</string>
    <string name="frg_update_txt_fill_all">Please, fill out all fields</string>
    <string name="frg_update_txt_question_delete">"Are you sure you want to delete '%1$s'?</string>
    <string name="frg_update_txt_question_delete_simple">"Delete '%1$s'?</string>
    <string name="frg_list_txt_question_delete">"Are you sure you want to delete all records?</string>
    <string name="frg_list_txt_question_delete_simple">"Delete all?</string>
    <string name="frg_update_txt_question_yes">Yes</string>
    <string name="frg_update_txt_question_no">No</string>


    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>