<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/scn_list_fragment_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/scn_list_fragment_menu_sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/scn_list_fragment_menu_priority_high" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/scn_list_fragment_menu_priority_low" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/scn_list_fragment_menu_delete_all"
        app:showAsAction="never" />
</menu>