<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.kosyakoff.todolistapp.fragments.list.ListFragment"
        android:label="@string/todoListFragmentTitle"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.kosyakoff.todolistapp.fragments.add.AddFragment"
        android:label="@string/addFragmentTitle"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.kosyakoff.todolistapp.fragments.update.UpdateFragment"
        android:label="@string/updateFragmentTitle"
        tools:layout="@layout/fragment_update">
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
</navigation>